--- a/index.html
+++ b/index.html
@@ -104,6 +104,7 @@
               <div class="tab-pane fade active in" id="about">
                 <p> MapaTaal aims to consolidate public geospatial data related to the recent Taal Volcano eruption. </p>
 		<p> The platform is based on <a href="http://leafletjs.com/" target="_blank">Leaflet</a>, <a href="http://twitter.github.io/typeahead.js/" target="_blank">typeahead.js</a> and <a href="https://github.com/bmcbride/bootleaf" target="_blank">BootLeaf</a>.</p>
+		<p> Current maps are from Phivolcs' GIS database found <a href="https://gisweb.phivolcs.dost.gov.ph/" target="_blank"> here </a>
 		<p> For suggestions, feature requests and bug reporting, please email bantaytaal2020@gmail.com </p>	
               </div>
 	  
