--- a/index.html
+++ b/index.html
@@ -55,6 +55,9 @@
             <div class="panel-heading">
               <h3 class="panel-title">UPDATES
               <button type="button" class="btn btn-xs btn-default pull-right" id="sidebar-hide-btn"><i class="fa fa-chevron-left"></i></button></h3>
+		 <li> "As of 7AM, 13 January 2020, light rains are being experienced in the eruption-affected areas. PHIVOLCS has also recorded a total of 75 earthquakes, all volcanic in origin.
+According to officials, 142 municipalities with a population of over 14M people are affected. Currently, 22 evacuation centers are housing 3,537 families (12,292 individuals).
+Power supply is still cut off in Talisay and Laurel, Batangas. Further, roads from Talisay to Lemery and Agoncillo remain impassable. Tagaytay City roads, while muddy, are passable. Fire volunteers are conducting an ongoing flushing operation to clear the area. All are advised to drive with extra caution." [PH Red Cross] </li> 
 		 <li><a href="https://www.phivolcs.dost.gov.ph/index.php/taal-volcano-bulletin-menu/9625-taal-volcano-bulletin-13-january-2020-8-00-a-m" target="_blank">TAAL VOLCANO BULLETIN 13 January 2020 8:00 A.M. [PHIVOLCS] </a></li>
 		 <li><a href="https://www.phivolcs.dost.gov.ph/index.php/taal-volcano-bulletin-menu/9622-eruption-update-for-taal-volcano-13-january-2020-03-20-am" target="_blank">ERUPTION UPDATE FOR TAAL VOLCANO 13 JANUARY 2020 03:20 AM [PHIVOLCS]</a></li>
             </div>
